feature of jenkinh

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hwe are learning html jewnkings</h1>
-    <p>html is a markup language for creating web pages</p>
-    <p>html is a markup language for creating web pages</p>
+    <h1>we are learning html jewnkings and we are very happy</h1>
+    <p>we are implementing all the feature of jenkins and we are very happy</p>
+
+    
+
 </body>
 </html>
